[package]
name = "bad-apple-term"
version = "0.1.0"
edition = "2021"
authors = ["Erick Vilcia erick.vilcica@protonmail.com"]
description = "Play the bad apple video in the terminal."
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
crossterm = "0.27.0"
